[gd_scene load_steps=64 format=2]

[ext_resource path="res://assets/animations/walk-animation (reversed).tres" type="Animation" id=1]
[ext_resource path="res://assets/sprites/agent1/lowerleg_right.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/agent1/lowerarm_right.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/agent1/hand_left.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/agent1/thigh_left.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/agent1/torso.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/agent1/head.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/agent1/lowerarm_left.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/agent1/gun.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/agent1/foot_right.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/agent1/thigh_right.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/agent1/upperarm_left.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/agent1/upperarm_right.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/agent1/foot_left.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/agent1/hand_right.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/agent1/lowerleg_left.png" type="Texture" id=16]
[ext_resource path="res://assets/scripts/player.gd" type="Script" id=17]
[ext_resource path="res://assets/sprites/groundsprites.png" type="Texture" id=18]
[ext_resource path="res://assets/animations/idle-animation.tres" type="Animation" id=19]
[ext_resource path="res://assets/animations/jump-animation.tres" type="Animation" id=20]
[ext_resource path="res://assets/sprites/degrees_circle.png" type="Texture" id=21]
[ext_resource path="res://assets/animations/aim/aim_45_degrees.tres" type="Animation" id=22]
[ext_resource path="res://assets/animations/aim/aim_90_degrees.tres" type="Animation" id=23]
[ext_resource path="res://assets/animations/aim/aim_30_degrees.tres" type="Animation" id=24]
[ext_resource path="res://assets/animations/aim/aim_minus_30_degrees.tres" type="Animation" id=25]
[ext_resource path="res://assets/animations/aim/aim_0_degrees.tres" type="Animation" id=26]
[ext_resource path="res://assets/animations/aim/aim_60_degrees.tres" type="Animation" id=27]
[ext_resource path="res://assets/animations/aim/aim_minus_90_degrees.tres" type="Animation" id=28]
[ext_resource path="res://assets/animations/aim/aim_minus_60_degrees.tres" type="Animation" id=29]
[ext_resource path="res://assets/animations/aim/aim_minus_45_degrees.tres" type="Animation" id=30]
[ext_resource path="res://assets/animations/walk-animation.tres" type="Animation" id=31]
[ext_resource path="res://assets/animations/run-animation.tres" type="Animation" id=32]
[ext_resource path="res://assets/scripts/gun.gd" type="Script" id=33]
[ext_resource path="res://assets/scripts/pivot.gd" type="Script" id=34]
[ext_resource path="res://assets/scenes/healthbar.tscn" type="PackedScene" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 62.8429 )

[sub_resource type="AnimationNodeAdd2" id=2]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "walk (reversed)"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "no_aim"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeTimeScale" id=9]

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "aim_minus_90_degrees"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "aim_90_degrees"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "aim_45_degrees"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "aim_60_degrees"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "aim_minus_30_degrees"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "aim_minus_45_degrees"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "aim_minus_60_degrees"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "aim_0_degrees"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "aim_30_degrees"

[sub_resource type="AnimationNodeBlendSpace1D" id=19]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = -90.0
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = 90.0
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = 45.0
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = 60.0
blend_point_4/node = SubResource( 14 )
blend_point_4/pos = -30.0
blend_point_5/node = SubResource( 15 )
blend_point_5/pos = -45.0
blend_point_6/node = SubResource( 16 )
blend_point_6/pos = -60.0
blend_point_7/node = SubResource( 17 )
blend_point_7/pos = 0.0
blend_point_8/node = SubResource( 18 )
blend_point_8/pos = 30.0
min_space = -90.0
max_space = 90.0
snap = 15.0

[sub_resource type="AnimationNodeTransition" id=20]
input_count = 2
input_0/name = "aiming"
input_0/auto_advance = false
input_1/name = "not_aiming"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=21]
input_count = 2
input_0/name = "ground"
input_0/auto_advance = false
input_1/name = "air"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=22]
input_count = 2
input_0/name = "yes"
input_0/auto_advance = false
input_1/name = "no"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=23]
input_count = 2
input_0/name = "yes"
input_0/auto_advance = false
input_1/name = "no"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlend2" id=24]

[sub_resource type="AnimationNodeBlendTree" id=25]
graph_offset = Vector2( -242, -64.75 )
nodes/Add2/node = SubResource( 2 )
nodes/Add2/position = Vector2( 580, 160 )
nodes/Animation/node = SubResource( 8 )
nodes/Animation/position = Vector2( -260, 280 )
"nodes/Animation 2/node" = SubResource( 3 )
"nodes/Animation 2/position" = Vector2( -480, 160 )
"nodes/Animation 3/node" = SubResource( 4 )
"nodes/Animation 3/position" = Vector2( 20, 340 )
"nodes/Animation 4/node" = SubResource( 5 )
"nodes/Animation 4/position" = Vector2( -480, 20 )
"nodes/Animation 5/node" = SubResource( 6 )
"nodes/Animation 5/position" = Vector2( -220, -80 )
"nodes/Animation 6/node" = SubResource( 7 )
"nodes/Animation 6/position" = Vector2( 60, 620 )
nodes/TimeScale/node = SubResource( 9 )
nodes/TimeScale/position = Vector2( 0, -60 )
nodes/aim/node = SubResource( 19 )
nodes/aim/position = Vector2( 40, 460 )
nodes/aim_state/node = SubResource( 20 )
nodes/aim_state/position = Vector2( 380, 360 )
nodes/in_air_state/node = SubResource( 21 )
nodes/in_air_state/position = Vector2( 380, 160 )
nodes/moonwalking/node = SubResource( 22 )
nodes/moonwalking/position = Vector2( -240, 80 )
nodes/output/position = Vector2( 780, 160 )
nodes/running/node = SubResource( 23 )
nodes/running/position = Vector2( 200, 20 )
nodes/walk-idle/node = SubResource( 24 )
nodes/walk-idle/position = Vector2( 0, 140 )
node_connections = [ "output", 0, "Add2", "in_air_state", 0, "running", "in_air_state", 1, "Animation 3", "walk-idle", 0, "moonwalking", "walk-idle", 1, "Animation", "aim_state", 0, "aim", "aim_state", 1, "Animation 6", "moonwalking", 0, "Animation 4", "moonwalking", 1, "Animation 2", "Add2", 0, "in_air_state", "Add2", 1, "aim_state", "TimeScale", 0, "Animation 5", "running", 0, "TimeScale", "running", 1, "walk-idle" ]

[sub_resource type="Animation" id=26]
tracks/0/type = "value"
tracks/0/path = NodePath("body/chest/torso/upperarm_right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13.4064, -14.1956 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/chest/torso/upperarm_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.71388 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/chest/torso/upperarm_right/lowerarm_right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.01368, 20.0398 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/chest/torso/upperarm_right/lowerarm_right:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -95.4898 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/chest/torso/upperarm_left:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.5659, -12.422 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/chest/torso/upperarm_left:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.58036 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body/chest/torso/upperarm_right/lowerarm_right/hand_right:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.33635, 15.2045 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body/chest/torso/upperarm_right/lowerarm_right/hand_right:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.20589 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/chest/torso/upperarm_left/lowerarm_left:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.938873, 18.0288 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/chest/torso/upperarm_left/lowerarm_left:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -112.183 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/chest/torso/upperarm_left/lowerarm_left/hand_left:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 18.566 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("body/chest/torso/upperarm_left/lowerarm_left/hand_left:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 88.1301 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("body/chest/torso/gun:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13.8132, -0.0199375 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("body/chest/torso/gun:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=27]
radius = 30.9113
height = 75.8569

[sub_resource type="RectangleShape2D" id=28]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -160, 0 )
collision_layer = 4
collision_mask = 2147483678
script = ExtResource( 17 )
maxHealth = 1000.0

[node name="body" type="Position2D" parent="."]
position = Vector2( 0, -0.0808167 )

[node name="chest" type="Position2D" parent="body"]
position = Vector2( 0, 11.712 )

[node name="torso" type="Sprite" parent="body/chest"]
position = Vector2( 0, -15.094 )
texture = ExtResource( 6 )
offset = Vector2( -1.59697, -3.48996 )

[node name="gun" type="Sprite" parent="body/chest/torso"]
position = Vector2( 22.0728, -1.75482 )
texture = ExtResource( 9 )
script = ExtResource( 33 )

[node name="laser" type="Sprite" parent="body/chest/torso/gun"]
visible = false
modulate = Color( 1, 0, 0, 0.741176 )
position = Vector2( 130.638, -8.46777 )
scale = Vector2( 1.43875, 0.0154226 )
texture = ExtResource( 18 )

[node name="BulletPoint" type="Node2D" parent="body/chest/torso/gun"]
position = Vector2( 43.2659, -8.62711 )

[node name="BulletDelayTimer" type="Timer" parent="body/chest/torso/gun"]
one_shot = true

[node name="upperarm_left" type="Sprite" parent="body/chest/torso"]
position = Vector2( 15.5659, -12.422 )
rotation = -0.440587
z_index = -1
texture = ExtResource( 12 )
offset = Vector2( -0.0147476, 7.05466 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="lowerarm_left" type="Sprite" parent="body/chest/torso/upperarm_left"]
position = Vector2( -0.938873, 18.0288 )
rotation = -1.58248
texture = ExtResource( 8 )
offset = Vector2( 0.949958, 6.18722 )
__meta__ = {
"_edit_bone_": true
}

[node name="hand_left" type="Sprite" parent="body/chest/torso/upperarm_left/lowerarm_left"]
position = Vector2( 0, 18.566 )
rotation = 1.69921
z_index = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="upperarm_right" type="Sprite" parent="body/chest/torso"]
position = Vector2( -13.4064, -14.1956 )
rotation = -0.324783
z_index = 1
texture = ExtResource( 13 )
offset = Vector2( -0.0279083, 8.82368 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="lowerarm_right" type="Sprite" parent="body/chest/torso/upperarm_right"]
position = Vector2( -1.01368, 20.0398 )
rotation = -1.36206
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0.498055, 6.75774 )
__meta__ = {
"_edit_bone_": true
}

[node name="hand_right" type="Sprite" parent="body/chest/torso/upperarm_right/lowerarm_right"]
position = Vector2( 1.33635, 15.2045 )
rotation = 0.0559495
texture = ExtResource( 15 )
__meta__ = {
"_edit_bone_": true
}

[node name="head" type="Sprite" parent="body/chest/torso"]
position = Vector2( -0.0163317, -24.4058 )
z_index = 1
texture = ExtResource( 7 )
offset = Vector2( 4.72615, -21.8243 )
__meta__ = {
"_edit_bone_": true
}

[node name="legs" type="Position2D" parent="body"]
position = Vector2( 0, 11.189 )
rotation = -0.0338703
__meta__ = {
"_edit_bone_": true
}

[node name="thigh_right" type="Sprite" parent="body/legs"]
position = Vector2( -6.06485, 3.40305 )
rotation = -0.446363
texture = ExtResource( 11 )
offset = Vector2( -0.569733, 9.51619 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="lowerleg_right" type="Sprite" parent="body/legs/thigh_right"]
position = Vector2( -1.00315, 16.9141 )
rotation = 0.510116
texture = ExtResource( 2 )
offset = Vector2( 1.15935, 6.17796 )
__meta__ = {
"_edit_bone_": true
}

[node name="foot_right" type="Sprite" parent="body/legs/thigh_right/lowerleg_right"]
position = Vector2( 0.50671, 14.2428 )
rotation = -0.0449456
texture = ExtResource( 10 )
offset = Vector2( 6.97537, 2.76973 )
__meta__ = {
"_edit_bone_": true
}

[node name="toes_right" type="Position2D" parent="body/legs/thigh_right/lowerleg_right/foot_right"]
position = Vector2( 15.1624, 5.05409 )
__meta__ = {
"_edit_bone_": true
}

[node name="thigh_left" type="Sprite" parent="body/legs"]
position = Vector2( 3.28812, 3.49881 )
rotation = 0.193963
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -0.0710678, 9.22731 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="lowerleg_left" type="Sprite" parent="body/legs/thigh_left"]
position = Vector2( 1.05579, 17.9436 )
rotation = 1.65078
texture = ExtResource( 16 )
offset = Vector2( 0.816467, 5.62079 )
__meta__ = {
"_edit_bone_": true
}

[node name="foot_left" type="Sprite" parent="body/legs/thigh_left/lowerleg_left"]
position = Vector2( 0.074131, 13.4046 )
rotation = 0.267466
texture = ExtResource( 14 )
offset = Vector2( 6.562, 2.194 )
__meta__ = {
"_edit_bone_": true
}

[node name="toes_left" type="Position2D" parent="body/legs/thigh_left/lowerleg_left/foot_left"]
position = Vector2( 12.9359, 4.65146 )
__meta__ = {
"_edit_bone_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.41577, -8.88424 )
z_index = 1
shape = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/TimeScale/scale = 2.7
parameters/aim/blend_position = 0.111
parameters/aim_state/current = 0
parameters/in_air_state/current = 0
parameters/moonwalking/current = 1
parameters/running/current = 1
parameters/walk-idle/blend_amount = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aim_0_degrees = ExtResource( 26 )
anims/aim_30_degrees = ExtResource( 24 )
anims/aim_45_degrees = ExtResource( 22 )
anims/aim_60_degrees = ExtResource( 27 )
anims/aim_90_degrees = ExtResource( 23 )
anims/aim_minus_30_degrees = ExtResource( 25 )
anims/aim_minus_45_degrees = ExtResource( 30 )
anims/aim_minus_60_degrees = ExtResource( 29 )
anims/aim_minus_90_degrees = ExtResource( 28 )
anims/idle = ExtResource( 19 )
anims/jump = ExtResource( 20 )
anims/no_aim = SubResource( 26 )
anims/run = ExtResource( 32 )
anims/walk = ExtResource( 31 )
"anims/walk (reversed)" = ExtResource( 1 )

[node name="ground" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.085, 59.466 )
scale = Vector2( 1, 0.139654 )
z_index = -3
texture = ExtResource( 18 )

[node name="degrees_circle" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.305882 )
position = Vector2( -8.656, -5.013 )
z_index = -3
texture = ExtResource( 21 )

[node name="ShootVector" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -14.763 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( -5.04538, 3.36359 )
script = ExtResource( 34 )

[node name="Timer" type="Timer" parent="Pivot"]

[node name="CameraOffset" type="Position2D" parent="Pivot"]

[node name="Camera2D" type="Camera2D" parent="Pivot/CameraOffset"]
current = true
zoom = Vector2( 0.9, 0.9 )
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1.4158, -8.88426 )
z_index = 1
shape = SubResource( 27 )

[node name="GroundChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundChecker"]
position = Vector2( 0, 52 )
scale = Vector2( 3, 1 )
shape = SubResource( 28 )

[node name="healthbar" parent="." instance=ExtResource( 35 )]
margin_left = -64.0
margin_top = -112.0
margin_right = -64.0
margin_bottom = -112.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Pivot/Timer" to="Pivot" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="GroundChecker" to="." method="_on_GroundChecker_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
